k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-clone
  labels:
    app: reddit-clone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reddit-clone
  template:
    metadata:
      labels:
        app: reddit-clone
    spec:
      containers:
      - name: reddit-clone-img
        image: ubaid004/reddit
        ports:
        - containerPort: 3000
