k8s/manifest.yml
apiVersion: v1

kind: Service

metadata:

  name: reddit-clone-service

  labels:

    app: reddit-clone

spec:

  type: NodePort

  ports:

  - port: 3000

    targetPort: 3000

    nodePort: 30007

  selector:

    app: reddit-clone
